--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,8 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?smbmoci#1" target="_blank">首页</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/1?nkqmxmm" target="_blank">动态网</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/2?hmjgmli" target="_blank">大纪元</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/4?tcoigrhk" target="_blank">看中国</a> | <a href="https://d1lulvfep8g527.cloudfront.net/pHh5q?mybmqhjq" target="_blank">新生网</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/tktpt?hzgdzxu" target="_blank">阿波罗网</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/Mjpvu?cuhjqkr" target="_blank">干净世界</a> | <a href="https://d1fejrztdgsube.cloudfront.net/10?tezkcmeu" target="_blank">退党服务</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/Rffqf?patdo" target="_blank">明慧广播</a> | <a href="https://dme0bxbvomkno.cloudfront.net/nw9Vn?zuhxt" target="_blank">传奇时代</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/AF9AG?dzpxi" target="_blank">新境界影视</a> | <a href="https://d124e4v75n9sum.cloudfront.net/zqMQA?iprtpu" target="_blank">文昭谈论</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/7?ymmvwmc" target="_blank">明慧</a></p><p><a href="https://dep6yudto3kbo.cloudfront.net/9?ccoiblmnw" target="_blank">大法</a> | <a href="https://doh73o6c3dnba.cloudfront.net/3?drbieytd" target="_blank">新唐人</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/obAhT?bkulnjaou" target="_blank">人民报</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/xXNHu?noyhyqxq" target="_blank">放光明</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/5?zghcsj" target="_blank">新纪元</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/6?qcxbb" target="_blank">希望之声</a> | <a href="https://dcz6rimunj42y.cloudfront.net/11?wjvtwvbr" target="_blank">无界网络</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/Pueji?spuswd" target="_blank">追查国际</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/16?izliv" target="_blank">明慧之窗</a> | <a href="https://di88ceki78g29.cloudfront.net/LdvzZ?njlijqpb" target="_blank">细语人生</a> | <a href="https://d3siwajeg0khti.cloudfront.net/fBn3r?skxjcycse" target="_blank">新世纪影视</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/PUWMb?nezmux" target="_blank">江峰时刻</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/8?ovyvemf" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?rhovy#1" target="_blank">首页</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/1?adcitekgu" target="_blank">动态网</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/2?vouvh" target="_blank">大纪元</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/4?kjyfidqg" target="_blank">看中国</a> | <a href="https://d3l8osd9w9ntl9.cloudfront.net/pHh5q?vwbrmdk" target="_blank">新生网</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/tktpt?rtevzyq" target="_blank">阿波罗网</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/Mjpvu?ojdwwbm" target="_blank">干净世界</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/10?bonzmmkr" target="_blank">退党服务</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/Rffqf?guahmoz" target="_blank">明慧广播</a> | <a href="https://d2oemtubh889hy.cloudfront.net/nw9Vn?agwuzf" target="_blank">传奇时代</a> | <a href="https://doqmgyop4u892.cloudfront.net/AF9AG?qftuxz" target="_blank">新境界影视</a> | <a href="https://d3abchfok6e2j.cloudfront.net/zqMQA?ygsecl" target="_blank">文昭谈论</a> | <a href="https://d3vg08phoazui6.cloudfront.net/7?kiudu" target="_blank">明慧</a></p><p><a href="https://d1ucfc2ix2o07u.cloudfront.net/9?jxxjirhq" target="_blank">大法</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/3?wmebnucp" target="_blank">新唐人</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/obAhT?baitsupf" target="_blank">人民报</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/xXNHu?nzyce" target="_blank">放光明</a> | <a href="https://db8nk66phkh66.cloudfront.net/5?gjosdd" target="_blank">新纪元</a> | <a href="https://d8jw662akk94j.cloudfront.net/6?dhytk" target="_blank">希望之声</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/11?lwepfka" target="_blank">无界网络</a> | <a href="https://db8nk66phkh66.cloudfront.net/Pueji?wglawchg" target="_blank">追查国际</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/16?qqehvpk" target="_blank">明慧之窗</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/LdvzZ?dgkaodpnr" target="_blank">细语人生</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/fBn3r?fpsiapp" target="_blank">新世纪影视</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/PUWMb?cqsvthqy" target="_blank">江峰时刻</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/8?orjfbp" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307547.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042965-china-germany-shipping-business-1200x800-320x200.jpg"><p align="center">分析：中共出口型经济无法持续 内需难提振</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307547.md#1" title="分析：中共出口型经济无法持续 内需难提振""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/07/id14042965-china-germany-shipping-business-1200x800-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307666.md#1" title="奥运第13日：美国田径夺3金 连续5天登顶""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307698-GettyImages-2165919729-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307614.md#1" title="【菁英论坛】紧张局势陡升 中东成火药桶？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307805-1200-x-800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307578.md#1" title="诺奖得主尤努斯正式掌管孟加拉国临时政府""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307628-GettyImages-2165353630-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307307.md#1" title="山西奥瑞非法买尸 青岛大学器官移植中心涉案""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307415-MixCollage-08-Aug-2024-02-31-PM-1051-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307561.md#1" title="又一家！英国航空自10月26日起停飞北京航班""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/000_1PV3KE-320x200.jpg">&nbsp;</a>
@@ -10,30 +12,28 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307476.md#1" title="大外宣没钱 侨报停周末版 美国中文关电视""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307569-b6a946d3626dfb2cde5c7c61603057ab-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307244.md#1" title="【一线采访】大陆多行业裁员 民叹好可怜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2005/11/511040129081673.bmp">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307447.md#1" title="美国就业市场活力下滑 引发经济衰退担忧""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14088922-GettyImages-1481494163-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307349.md#1" title="盗窃倒卖数千具尸体 头号央企卷入""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307368-9957789201cf0a185ec1be14d85209b7-320x200.png">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307126.md#1" title="大陆现3反常现象 制造业萎缩 工人维权案增""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/11/id14116450-GettyImages-1246125910-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307710.md#1">川普：民主党大会结束前不再参加竞选集会</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307836.md#1">热带风暴“黛比”余威仍在 霍楚警告可能出现灾难性降雨</a><br>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307777.md#1">破解盗贼偷车新技术 纽约市警局教你两招预防</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307747.md#1">台湾兰花世界展 纽约市王后区植物园登场</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307842.md#1">纽约州暑假粮食券 低收入家庭学童可获120元 9月3日前仍可申请</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307839.md#1">共享电动滑板车 进驻纽约市法拉盛</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307834.md#1">参与骗贷20亿美元 前莫桑比克财政部长罪成</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307717.md#1">纽约办公楼市场缓慢回温 哈德逊广场周边最值钱</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307763.md#1">乌军大规模反攻 攻占俄国领土约350平方公里</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307802.md#1">奥运冲浪比赛有“鲸喜” 鲸鱼跃出海面抢镜</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307710.md#1">川普：民主党大会结束前不再参加竞选集会</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307836.md#1">热带风暴“黛比”余威仍在 霍楚警告可能出现灾难性降雨</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307777.md#1">破解盗贼偷车新技术 纽约市警局教你两招预防</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307747.md#1">台湾兰花世界展 纽约市王后区植物园登场</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307842.md#1">纽约州暑假粮食券 低收入家庭学童可获120元 9月3日前仍可申请</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307839.md#1">共享电动滑板车 进驻纽约市法拉盛</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307834.md#1">参与骗贷20亿美元 前莫桑比克财政部长罪成</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307717.md#1">纽约办公楼市场缓慢回温 哈德逊广场周边最值钱</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307763.md#1">乌军大规模反攻 攻占俄国领土约350平方公里</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306829.md#1">陈梦战胜孙颖莎 球迷喝倒彩 背后黑幕重重</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307072.md#1">北戴河消息紧锁 体制内频现实名举报</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306432.md#1">杭州一护士疑与医生有染 丈夫自杀 评论区炸锅</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306343.md#1">广州茶叶市场再度一夜崩盘 “泛茶”爆雷</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306227.md#1">在微博痛批网证新规 清华教授遭永久禁言</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306811.md#1">智利最大钢铁厂停产 指控中共倾销加剧</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306103.md#1">中共推网证被批“编户” 网民抵制并发起诉讼</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306176.md#1">消费降级？ 中国超市刮起“食堂风”</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306838.md#1">“卖出去就是好事” 东莞现多处低于地价楼盘</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294630.md#1">【特稿】七二零：黑暗与光的交战</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
@@ -69,6 +69,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307032.md#1">美全方位打击中共渗透 华人如何应对中共诱惑</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307439.md#1">江西国盛证券连收九张罚单 前董事长外逃多年</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306772.md#1">黑龙江法轮功学员尹秋珍遭绑架 54万元遭抢</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307126.md#1">大陆现3反常现象 制造业萎缩 工人维权案增</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307180.md#1">大量富豪及中产阶级为何润出中国 专家解析</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307024.md#1">中国养老基金告急 分析：延迟退休治标不治本</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305360.md#1">“被偷走的三年” 中国中产之家的润美心路</a><br>
@@ -107,9 +108,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305252.md#1">【新闻大破解】搅乱中东计划或破局 中共尴尬了</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305269.md#1">Temu严苛罚款扣款 商家：更愿转投亚马逊</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305033.md#1">中共推农民大规模进城落户 专家析背后算计</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304799.md#1">加州华人声援湖南方艺融反共壮举 吁国际关注</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2pbuaczjc4z9o.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2pbuaczjc4z9o.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,022</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2kq40nemm7mwl.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2kq40nemm7mwl.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,022</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
